@@ -1,7 +1,7 @@
 plugins {
+    id 'org.springframework.boot' version '3.3.4' apply false
+    id 'io.spring.dependency-management' version '1.1.6' apply false
     id 'java'
-    id 'org.springframework.boot' version '3.3.4' apply( false)
-    id 'io.spring.dependency-management' version '1.1.6' apply( false)
 }
 
 allprojects {
@@ -12,35 +12,22 @@ allprojects {
         mavenCentral()
         mavenLocal()
     }
-//
-//    tasks.named('test') {
-//        useJUnitPlatform()
-//    }
-
-    tasks.withType(JavaExec).tap {
-        configureEach {
-            jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
-        }
-    }
-    tasks.withType(JavaCompile).tap {
-        configureEach {
-            options.encoding = 'UTF-8'
-            options.release = 21
-            options.compilerArgs.addAll(['--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'])
-            sourceCompatibility = JavaVersion.VERSION_21
-            targetCompatibility = JavaVersion.VERSION_21
-        }
-    }
 
 }
 subprojects {
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
+    sourceCompatibility = '17'
 
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
 
-    java {
-        toolchain {
-            languageVersion = JavaLanguageVersion.of(21)
-        }
+    test {
+        useJUnitPlatform()
     }
 }
 
